# LifeTag

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  startup.sh
AppWeb/: index.html  script.js  style.css
IA/: requirements.txt  scenario.py  setup.py  startup.sh  steps.sh
IA/greenmind/: utils.py
IA/greenmind/ai/: __init__.py  predict.py  train.py
IA/greenmind/mqtt/: __init__.py  client.py
LifeTag_Arduino/: LifeTag_Arduino.ino  build.sh  run.sh
LifeTag_Arduino/main/: CHANGELOG.md  main.ino
LifeTag_Arduino/test/: test_main.ino
lab/: Mermaid.md  Plan_Avancement_GreenMind.xlsx  architecture_electronique.docx  composant.xlsx  managements_de_project.docx  matrice_RACI.xlsx
lib/: CMakeLists.txt
lib/inc/: version.h
lib/src/: version.cpp
main/: CMakeLists.txt  main.cpp
projectQt/: CMakeLists.txt
projectQt/cmake/: toolchain-rpi-aarch64.cmake
projectQt/src/: blink.c  ledController.cpp  ledController.h  led_on.c  main.cpp  test_blink.c
test/: CMakeLists.txt  test_main.cpp
